--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1707,7 +1707,30 @@ $('#hsp_result_table tr').each(function() {
    
    
 <TMPL_IF NAME="RESULT_TABLE">
-<span class=species>HSP Table:</span>
+<span class=species>HSP Table:</span><input type = checkbox onclick="$('#show_columns').slideToggle();"><span class = "small" >Show HSP Table column display options?</span>
+    <table class = "small resultborder" id="show_columns" style="display :none">
+     <tr>
+       <td><input type = checkbox onclick="toggle_hsp_column(1);" checked>Query Sequence Name
+       <td><input type = checkbox onclick="toggle_hsp_column(2);" checked>Organism Name
+       <td><input type = checkbox onclick="toggle_hsp_column(3);" checked>Chromosome
+       <td><input type = checkbox onclick="toggle_hsp_column(4);" checked>Position
+     <tr>
+       <td><input type = checkbox onclick="toggle_hsp_column(5);" checked>HSP Number
+       <td><input type = checkbox onclick="toggle_hsp_column(6);" checked>HSP Length
+       <td><input type = checkbox onclick="toggle_hsp_column(7);" checked>Query Sequence Coverage
+       <td><input type = checkbox onclick="toggle_hsp_column(8);" checked>HSP E-value
+     <tr>
+       <td><input type = checkbox onclick="toggle_hsp_column(9);" checked>HSP Percent Identity
+       <td><input type = checkbox onclick="toggle_hsp_column(10);" checked>HSP Score
+       <td><input type = checkbox onclick="toggle_hsp_column(11);" checked>HSP Quality (query coverage * percent ID)
+       <td><input type = checkbox onclick="toggle_hsp_column(12);" checked>Closest Genomic Feature
+     <tr>
+       <td><input type = checkbox onclick="toggle_hsp_column(13);" checked>Distance to Closest Feature
+
+    </table>
+ 
+
+
    <div id=table_size style="max-height: 340px;">
    <div id="null"><TMPL_VAR NAME=NULLIFY></div>
    <TMPL_IF NAME="HSP_TABLE">
@@ -1911,29 +1934,6 @@ $('#hsp_result_table tr').each(function() {
       </TD>
       <TD valign="top" align=left >
        	 <DIV id=result_features align=left valign="top">
-    <input type = checkbox onclick="$('#show_columns').slideToggle();">Show HSP Table column display options?	
-    <table class = "small resultborder" id="show_columns" style="display :none">
-     <tr>
-       <td><input type = checkbox onclick="toggle_hsp_column(1);" checked>Query Sequence Name
-       <td><input type = checkbox onclick="toggle_hsp_column(2);" checked>Organism Name
-       <td><input type = checkbox onclick="toggle_hsp_column(3);" checked>Chromosome
-       <td><input type = checkbox onclick="toggle_hsp_column(4);" checked>Position
-     <tr>
-       <td><input type = checkbox onclick="toggle_hsp_column(5);" checked>HSP Number
-       <td><input type = checkbox onclick="toggle_hsp_column(6);" checked>HSP Length
-       <td><input type = checkbox onclick="toggle_hsp_column(7);" checked>Query Sequence Coverage
-       <td><input type = checkbox onclick="toggle_hsp_column(8);" checked>HSP E-value
-     <tr>
-       <td><input type = checkbox onclick="toggle_hsp_column(9);" checked>HSP Percent Identity
-       <td><input type = checkbox onclick="toggle_hsp_column(10);" checked>HSP Score
-       <td><input type = checkbox onclick="toggle_hsp_column(11);" checked>HSP Quality (query coverage * percent ID)
-       <td><input type = checkbox onclick="toggle_hsp_column(12);" checked>Closest Genomic Feature
-     <tr>
-       <td><input type = checkbox onclick="toggle_hsp_column(13);" checked>Distance to Closest Feature
-
-    </table>
- 
-
           <form id=feature_list>
           <TMPL_VAR NAME="HSP_RESULTS">
           </form>
