Added menu lnk to system support

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -192,6 +192,7 @@ function animate_section(name, style, speedy, show) {
 	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
 	      <li><a href="/CoGe/docs/help/Tutorials/Tutorials.html" target="_blank">Tutorials</a></li>
 	      <li><a href="/CoGe/docs/help/Contact/Contact.html" target="_blank">Contact or Cite Us</a></li>
+	      <li><a href="/CoGe/docs/help/CoGe_System_Support/" target="_blank">System Support and Consulting</a></li>
 	</ul>
 	</li>
 	</ul>
